[gd_scene load_steps=9 format=3 uid="uid://hon3wny4m3ey"]

[ext_resource type="Script" path="res://Customer2.gd" id="1_6eg1e"]
[ext_resource type="Texture2D" uid="uid://couishfrllbon" path="res://Customer/walkLeft.png" id="2_uedse"]
[ext_resource type="Texture2D" uid="uid://c735ysskloiye" path="res://food/brainSoupOrder.png" id="3_ex8vq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7uml"]
size = Vector2(68.5, 71.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh0yc"]
atlas = ExtResource("2_uedse")
region = Rect2(232, 0, 116, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn0wi"]
atlas = ExtResource("2_uedse")
region = Rect2(116, 0, 116, 108)

[sub_resource type="AtlasTexture" id="AtlasTexture_0as25"]
atlas = ExtResource("2_uedse")
region = Rect2(0, 0, 116, 108)

[sub_resource type="SpriteFrames" id="SpriteFrames_mxuv3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh0yc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn0wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0as25")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}]

[node name="Customer2" type="CharacterBody2D" groups=["Customer"]]
collision_mask = 4
input_pickable = true
script = ExtResource("1_6eg1e")

[node name="chair1" type="Node2D" parent="."]
position = Vector2(510, 200)

[node name="chair2" type="Node2D" parent="."]
position = Vector2(510, 390)

[node name="chair3" type="Node2D" parent="."]
position = Vector2(510, 550)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.75, -12.25)
shape = SubResource("RectangleShape2D_t7uml")

[node name="boo2" type="AnimatedSprite2D" parent="." groups=["Customer"]]
position = Vector2(-1, -0.999999)
scale = Vector2(0.744253, 0.75)
sprite_frames = SubResource("SpriteFrames_mxuv3")
animation = &"walk_left"

[node name="order_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(10, -72)
scale = Vector2(0.5, 0.464)
texture = ExtResource("3_ex8vq")

[node name="OrderHide" type="Timer" parent="."]
wait_time = 6.0

[node name="OrderShow" type="Timer" parent="."]
wait_time = 3.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="OrderHide" to="." method="_on_order_hide_timeout"]
[connection signal="timeout" from="OrderShow" to="." method="_on_order_show_timeout"]
